# architect-sdk

./: .env.example  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  build.rs
.cursor/plans/: config-driven_rust_backend_f5241a36.plan.md  multi-tenant_three_modes_dd52e8c3.plan.md
.github/workflows/: publish.yml
docs/: postgres-config-schema.md
example_consumer/: Cargo.toml
example_consumer/src/: main.rs
examples/: server.rs
postman/: Architect-SDK-API.postman_collection.json  Architect-SDK-Config-and-Health.postman_collection.json  README.md
sample/: api_entities.json  columns.json  enums.json  extensible_fields.example.json  indexes.json  kv_stores.json  manifest.json  relationships.json  schemas.json  tables.json
sample_ecommerce/: README.md  api_entities.json  columns.json  enums.json  indexes.json  kv_stores.json  manifest.json  relationships.json  tables.json
scripts/: release.sh  seed_kv_data.sql  seed_tenants.sql  update_coverage.sh
src/: authrs.rs  case.rs  error.rs  extensible_fields.rs  lib.rs  migration.rs  openapi.rs  response.rs  state.rs  store.rs  tenant.rs
src/config/: loader.rs  mod.rs  resolved.rs  types.rs  validator.rs
src/db/: dialect.rs  mod.rs  mysql.rs  pool.rs  postgres.rs  sqlite.rs  types.rs
src/events/: mod.rs
src/extractors/: tenant.rs  user.rs
src/handlers/: asset.rs  config.rs  entity.rs  extensible_fields.rs  kv.rs  mod.rs  module.rs  package.rs  plugin.rs
src/mcp/: handler.rs  mod.rs  tools.rs
src/routes/: common.rs  config.rs  entity.rs  mod.rs
src/service/: crud.rs  mod.rs  validation.rs
src/sql/: builder.rs  mod.rs  params.rs  rsql.rs
src/storage/: azure.rs  gcs.rs  mod.rs
tests/: sqlite_integration.rs
