[package]
name = "architect-sdk"
version = "0.1.0"
edition = "2021"
description = "Configuration-driven REST backend with PostgreSQL"

[lib]
name = "architect_sdk"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["json", "multipart"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["limit"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }
regex = "1"
dotenvy = "0.15"
zip = "2.2"
