[workspace]
members = [".", "example_consumer"]

[package]
name = "foundry-rs"
version = "0.1.7"
edition = "2021"
rust-version = "1.75"
description = "Configuration-driven REST backend library for Rust with PostgreSQL — define schemas, tables, and APIs in JSON, get a production-grade REST service."
license = "MIT"
authors = ["Kaushik Sundar <tech@rg2k.com>"]
repository = "https://github.com/kaushik-xs/architect-sdk"
homepage = "https://github.com/kaushik-xs/architect-sdk"
documentation = "https://docs.rs/foundry-rs"
readme = "README.md"
keywords = ["rest", "api", "postgres", "backend", "configuration"]
categories = ["web-programming", "database", "web-programming::http-server"]

[lib]
name = "architect_sdk"
path = "src/lib.rs"

[features]
storage-s3 = ["dep:aws-sdk-s3", "dep:aws-config"]
storage-azure = ["dep:azure_storage", "dep:azure_storage_blobs", "dep:azure_identity", "dep:time"]
storage-gcs = ["dep:google-cloud-storage", "dep:google-cloud-auth"]
storage-all = ["storage-s3", "storage-azure", "storage-gcs"]

[dependencies]
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["json", "multipart"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["limit"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "json", "chrono", "uuid"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }
regex = "1"
dotenvy = "0.15"
zip = "2.2"
utoipa = { version = "5", features = ["chrono", "uuid"] }
flate2 = "1"
zstd = "0.13"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Storage backends (optional — enable via features)
aws-sdk-s3 = { version = "1", optional = true }
aws-config = { version = "1", optional = true }
azure_storage = { version = "0.20", optional = true }
azure_storage_blobs = { version = "0.20", optional = true }
azure_identity = { version = "0.20", optional = true }
time = { version = "0.3", optional = true }
google-cloud-storage = { version = "0.22", optional = true }
google-cloud-auth = { version = "0.17", optional = true }
