[package]
name = "example-consumer"
version = "0.1.0"
edition = "2021"
description = "Example Rust project that depends on architect-sdk as a private package"

[dependencies]
# Use the SDK from this private GitHub repo (CI uses GITHUB_TOKEN for access).
# For local development against uncommitted changes, use: architect-sdk = { path = ".." }
architect-sdk = { git = "https://github.com/kaushik-xs/architect-sdk" }
axum = "0.7"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"
